[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Themes/Titlemenuaddition.tres" type="Theme" id=1]
[ext_resource path="res://Assets/Fonts/arial_narrow_7.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scene/SavePopUpConfirmation.gd" type="Script" id=3]

[sub_resource type="Shader" id=19]
code = "shader_type canvas_item;

uniform vec4 topleft:hint_color;
uniform vec4 topright:hint_color;
uniform vec4 bottomleft:hint_color;
uniform vec4 bottomright:hint_color;

void fragment() {
	vec2 uv_corner = vec3(UV, 0.0).xy;
	vec4 top = mix(topleft, topright, uv_corner.x);
	vec4 bottom = mix(bottomleft, bottomright, uv_corner.x);
	COLOR =  mix(top, bottom, uv_corner.y);
}"

[sub_resource type="ShaderMaterial" id=20]
shader = SubResource( 19 )
shader_param/topleft = Color( 0.47451, 0.843137, 0.988235, 1 )
shader_param/topright = Color( 1, 0.968627, 0.478431, 1 )
shader_param/bottomleft = Color( 1, 0.968627, 0.478431, 1 )
shader_param/bottomright = Color( 0.627451, 0.807843, 0.827451, 1 )

[sub_resource type="ShaderMaterial" id=21]

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.807843, 0.0823529, 0.0823529, 1 )

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0.807843, 0.0823529, 0.0823529, 1 )

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0.807843, 0.0823529, 0.0823529, 1 )

[sub_resource type="DynamicFont" id=25]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.619608, 0.443137, 0.796078, 1 )

[sub_resource type="StyleBoxFlat" id=27]
bg_color = Color( 0.388235, 0.396078, 0.713726, 1 )

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 0.611765, 0.917647, 0.988235, 1 )

[sub_resource type="DynamicFont" id=29]
size = 26
font_data = ExtResource( 2 )

[node name="SavePopUpConfirmation" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -173.0
margin_top = -155.0
margin_right = -173.0
margin_bottom = -155.0
script = ExtResource( 3 )

[node name="ColorRect" type="Panel" parent="."]
material = SubResource( 20 )
margin_right = 368.0
margin_bottom = 171.0

[node name="exitButton" type="Button" parent="."]
material = SubResource( 21 )
margin_left = 331.0
margin_top = -2.0
margin_right = 407.0
margin_bottom = 73.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 1 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/normal = SubResource( 24 )
text = "X"

[node name="okButton" type="Button" parent="."]
margin_left = 27.0
margin_top = 124.0
margin_right = 315.0
margin_bottom = 200.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 25 )
custom_styles/hover = SubResource( 26 )
custom_styles/pressed = SubResource( 27 )
custom_styles/normal = SubResource( 28 )
text = "Continuer"

[node name="cancelButton" type="Button" parent="."]
margin_left = 196.0
margin_top = 123.0
margin_right = 470.0
margin_bottom = 199.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 25 )
custom_styles/hover = SubResource( 26 )
custom_styles/pressed = SubResource( 27 )
custom_styles/normal = SubResource( 28 )
text = "Annuler"

[node name="WarningText" type="RichTextLabel" parent="."]
margin_left = 22.0
margin_top = 12.0
margin_right = 376.0
margin_bottom = 117.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 29 )
text = "Vous êtes sur le point d'enregistrer cette présentation sous format svg"

[connection signal="pressed" from="exitButton" to="." method="_on_exitButton_pressed"]
[connection signal="pressed" from="okButton" to="." method="_on_okButton_pressed"]
[connection signal="pressed" from="cancelButton" to="." method="_on_cancelButton_pressed"]
